fix timer appearing behind content bug

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*The big reset*/
 *,
-*::before,
-*::after {
+*::::::before,
+*::::before {
   box-sizing: border-box;
 }
 
@@ -51,8 +51,8 @@ ol, ul {
 blockquote, q {
   quotes: none;
 }
-blockquote::before, blockquote::after,
-q::before, q::after {
+blockquote::::::before, blockquote::::before,
+q::::::before, q::::before {
   content: '';
   content: none;
 }
@@ -121,6 +121,25 @@ section {
   max-width: 1080px;
 }
 
+.search-section, .recipes, .userInput, .footer {
+  background-color: rgb(224, 228, 217);
+  position: relative;
+}
+
+.search-section::before,
+.recipes::before,
+.userInput::before,
+.footer::before {
+  content: '';
+  position: absolute;
+  top: -5rem;
+  left: -5rem;
+  width: calc(100% + 10rem);
+  height: calc(100% + 10rem);
+  background-color: rgb(224, 228, 217);
+  z-index: -1;
+}
+
 .top {
   position: fixed;
   top: -7rem;
@@ -130,6 +149,7 @@ section {
   justify-content: space-between;
   align-content: space-between;
   transition: top 0.3s ease-in-out;
+  z-index: -5;
 }
 
 .top div {
@@ -237,22 +257,6 @@ section {
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
-}
-
-.addRecipeButton {
-  margin: 1rem;
-  border-radius: 0.5rem;
-  background: linear-gradient(90deg, #036f11, #6fca3a);
-  border-color: #036f11;
-  border-style: solid;
-  border-width: 0.1em;
-  padding: 0.5rem;
-  cursor: pointer;
-  color: #F5F5F5;
-  font-weight: 700;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.3s ease-in-out;
-  
 }
 
 .addRecipeButton:hover {
@@ -383,6 +387,22 @@ section {
   width: 2rem;
   height: 2rem;
   filter: drop-shadow(0 5px 10px rgba(0, 0, 0, 0.3));
+}
+
+.addRecipeButton {
+  margin: 1rem;
+  border-radius: 0.5rem;
+  background: linear-gradient(90deg, #036f11, #6fca3a);
+  border-color: #036f11;
+  border-style: solid;
+  border-width: 0.1em;
+  padding: 0.5rem;
+  cursor: pointer;
+  color: #F5F5F5;
+  font-weight: 700;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.3s ease-in-out;
+  
 }
 
 .NewRecipeContainer button {
